style:home page, shadcn

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,16 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+
+    /* Shadcn */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
+    
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
