--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
