--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "recharts": "^2.15.4",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
